# little_oil

./: .gitignore  Cargo.toml  Readme.md  army.json  assmark.json  bleed.json  bow.json  brand.json  brand2.json  config.json  cull.json  delvejewel.json  elemental.json  explode.json  flake.nix  flask.json  frenzy.json  gigaflask.json  int.json  intgemsbluepearl.json  lexproxdelve.json  nearby.json  phys.json  quiver.json  recovershield.json  reflex.json  reserved  reserved.json  selfstack.json  tailwind.json  tr.json  unnerve.json
.direnv/: flake-profile-3-link
.github/workflows/: rust.yml
src/: actions.rs  auto_roll.rs  chaos_recipe.rs  dicts.rs  item.rs  main.rs  mouse.rs  screenshot.rs
tests/example_items/: amulet.txt  cluster_magic.txt  cluster_norm.txt  cluster_rare.txt  magic_helm.txt  unique.txt
