[package]
name = "little_oil"
version = "0.1.0"
authors = ["John"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5.0"
inputbot = "0.6.0"
serde_json = "1.0.50"
serde = { version = "1.0.105", features = ["derive"] }
clipboard = "0.5.0"
rand = "0.8.5"
regex = "1.3.9"
once_cell = "1.5.2"
ureq = { version = "2.5.0", features = ["serde_json", "serde", "json"] }
mouse-rs = "0.4.2"
rust_decimal = "1.34.3"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
#image = "*"
