[package]
name = "little_oil"
version = "1.0.0"
authors = ["John"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["input_wayland"]
input_wayland = ["dep:uinput", "dep:mouse-keyboard-input"]
input_x = ["dep:scrap", "dep:inputbot"]

[dependencies]
# Util
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }

rand = "0.8.5"
regex = "1.10.4"
# for once_cell::lazy
once_cell = "1.19.0"

clipboard = "0.5.0"

# api access for pathofexile
ureq = { version = "2.9.6", features = ["json"] }

# screenshotting
image = "0.25.1"

# For items
rust_decimal = "1.35.0"

# X input
scrap = { version = "0.5.0", optional = true }
inputbot = { version = "0.6.0", optional = true }

# wayland input
uinput = { version = "0.1.3", optional = true }
mouse-keyboard-input = { version = "0.4.1", optional = true }

# CLI arg parsing
clap = { version = "4.5.4", features = ["derive"] }
# get home directory
dirs = "5.0.1"
