[package]
name = "little_oil"
version = "0.1.0"
authors = ["John"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#scrap = "0.5.0"
#inputbot = "0.6.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
regex = "1.12.3"
once_cell = "1.21.3"
ureq = { version = "3.2.0", features = ["json"] }
#mouse-rs = "0.4.2"
rust_decimal = "1.40.0"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.6"
uinput = "0.1.3"
image = "0.25.9"
wayland-client = "0.31.13"
mouse-keyboard-input = { rev = "3d53ae6d7430a730908353c1281689f062e4eb0b", git = "https://github.com/John2143/mouse-keyboard-input.git" }
wl-clipboard-rs = "0.9.3"
#image = "*"
